fix [Bug] Default secondary color (dark slate) should be convert -> light slate in Dark Mode

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -21,28 +21,12 @@
     --font-heading: unset;
     --border-radius-theme: 0.125rem; /* 0.125rem / 0.375rem / 1rem */
     --border-radius-theme-button: 0.125rem; /* 0.125rem / 0.375rem / 1.75rem */
-    --primary-color-50: var(--foreground-rgb);
-    --primary-color-100: var(--foreground-rgb);
-    --primary-color-200: var(--foreground-rgb);
-    --primary-color-300: var(--foreground-rgb);
-    --primary-color-400: var(--foreground-rgb);
+
     --primary-color-500: var(--foreground-rgb);
     --primary-color-600: var(--foreground-rgb);
-    --primary-color-700: var(--foreground-rgb);
-    --primary-color-800: var(--foreground-rgb);
-    --primary-color-900: var(--foreground-rgb);
-    --primary-color-950: var(--foreground-rgb);
-    --secondary-color-50: var(--foreground-rgb);
-    --secondary-color-100: var(--foreground-rgb);
-    --secondary-color-200: var(--foreground-rgb);
-    --secondary-color-300: var(--foreground-rgb);
-    --secondary-color-400: var(--foreground-rgb);
     --secondary-color-500: var(--foreground-rgb);
     --secondary-color-600: var(--foreground-rgb);
-    --secondary-color-700: var(--foreground-rgb);
-    --secondary-color-800: var(--foreground-rgb);
-    --secondary-color-900: var(--foreground-rgb);
-    --secondary-color-950: var(--foreground-rgb);
+
     --heading-font-size: clamp(1.75rem, 6vw, 2.125rem);
     --hero-heading-font-size: clamp(2rem, 7vw, 3.125rem);
     --super-heading-font-size: clamp(2.5rem, 8vw, 3.75rem);
@@ -57,6 +41,12 @@
     :root {
       --container-horizontal-padding: 6rem;
     }
+  }
+  .dark {
+    --primary-color-500: 241 245 249;
+    --primary-color-600: 241 245 249;
+    --secondary-color-500: 241 245 249;
+    --secondary-color-600: 241 245 249;
   }
 }
 
